mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_collection_keys.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
set size: 2
has a: true
has z: false
x: 99
c2: 20
map size: 2
key present: true
rec key: 10
