mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_collection_payloads.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
first
count=2
third
map: ex
set size: 2
