mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_copy_deep_clone.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
s: second
t: first
u: first
=== enum copy deep-clone done ===
