mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_discard_release.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
subject: subject
tern: tern
classify: 1
