mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_equality.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
true
false
true
true
false
true
false
true
true
false
