mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_field_deep_clone.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
field: first
s: second
field: inactive
