mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_from_collection.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
blue
red
blue
red
alpha
alpha
beta
alpha
green
