mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_hash_keys.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
3
2
1
3
2
true
false
2
second
2
10
2
