mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_in_optional_result.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
red
none
hi
nope
