mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_mixed_types.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
=== Testing Basic Mixed Primitives ===
✓ Status.Active(string): running
✓ Status.Inactive(int): 42
✓ Status.Pending(bool): true
✓ Status.Code(char): extracted char value

=== Testing Collections as Enum Fields ===
✓ DataContainer.Names(list<string>): extracted list
✓ DataContainer.Scores(map<string, int>): extracted map
✓ DataContainer.Tags(set<string>): extracted set

=== Testing Multiple Fields of Different Types ===
✓ ComplexVariant.Simple(string): just a message
✓ ComplexVariant.Detailed(string, int, bool):
  msg: error occurred
  code: 404
  flag: false
✓ ComplexVariant.Numeric(int, float):
  int: 123
  float: 45.67

=== Testing Type-Specific Operations ===
✓ String concatenation: Hello World
✓ Integer arithmetic: 42

=== All Mixed-Type Enum Tests Completed ===
