mux-compiler/tests/snapshots/executable_integration__executable_integration__enum_module_qualified.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
circ 1.5
unit
warm
